--- a/.env.example
+++ b/.env.example
@@ -1,18 +1,7 @@
-PORT=
+POSTGRES_USER=
 POSTGRES_DB=
 POSTGRES_PASSWORD=
-PGPORT=
-
-DB_URI_DEV=
-
-ADMIN_NAME=
-ADMIN_EMAIL=
-ADMIN_PASSWORD=
 
 SECRET_KEY=
 EXPIRES_IN=
 
-NODEMAILER_HOST=
-NODEMAILER_PORT=
-NODEMAILER_USER=
-NODEMAILER_PASWORD=
