--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "typescript": "4.5.2"
   },
   "scripts": {
-    "dev": "ts-node-dev src/app.ts",
+    "dev": "ts-node-dev --files --rs src/server.ts",
     "typeorm": "typeorm-ts-node-commonjs"
   }
 }
